force-app/main/default/objects/Opportunity/fields/Expensive_Price__c.field-meta.xml
<CustomField>
    <fullName>Expensive_Price__c</fullName>
    <label>Expensive Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>