force-app/main/default/objects/Opportunity/fields/Most_Expensive_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Most_Expensive_Competitor__c</fullName>
    <label>Most Expensive Competitor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>